Completed the filters for all questions and choices
It can now pull data from firebase

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -82,7 +82,7 @@
         tools:layout_editor_absoluteY="481dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/btn_newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
