--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,4 +4,9 @@
         <item>0.0</item>
     </array>
 
+    <string-array name="gender_options">
+        <item> Male </item>
+        <item> Female </item>
+        <item> Non-Binary </item>
+    </string-array>
 </resources>
