Added countrie to the spinner
Hardcoded 7 country options since I do not know how to import all the countries yet.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_height="62dp"
         android:fontFamily="cursive"
         android:text="What2Watch"
-        android:textColor="#000000"
+        android:textColor="#D30404"
         android:textSize="40sp"
         android:textStyle="bold"
         android:typeface="serif"
@@ -229,7 +229,7 @@
         android:id="@+id/countrySpinner"
         android:layout_width="359dp"
         android:layout_height="51dp"
-        android:text="TextView"
+        android:text="Country"
         android:textColor="#0C0606"
         app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
         app:layout_constraintEnd_toEndOf="parent"
