Login function working again

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,5 @@
         <item> Female </item>
         <item> Non-Binary </item>
     </string-array>
+    <string-array name="country_options" />
 </resources>
