--- a/app/src/main/res/layout/movies_shows_card.xml
+++ b/app/src/main/res/layout/movies_shows_card.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="208dp"
         android:padding="20dp">
 
         <ImageView
@@ -14,52 +14,68 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginEnd="8dp"
-            android:contentDescription="Results Image"
-            android:icon="@drawable/ic_reel" /> <!-- Temporary photo -->
+            android:contentDescription="@string/results_image"
+            android:src="@drawable/background_image" /> <!-- Temporary photo -->
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/text_name"
-            android:text="Movie Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/image_view"
+            android:text="Movie Title"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/text_type1"
-            android:layout_toEndOf="@id/image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/text_name"
-            android:text="Type"
-            android:paddingTop="5dp"/>
+            android:layout_toEndOf="@id/image_view"
+            android:paddingTop="5dp"
+            android:text="Type" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/text_genre"
-            android:layout_toEndOf="@id/image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/text_type1"
-            android:text="Genre"
-            android:paddingTop="5dp"/>
+            android:layout_toEndOf="@id/image_view"
+            android:paddingTop="5dp"
+            android:text="Genre" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@id/text_year"
-            android:layout_toEndOf="@id/image_view"
-            android:layout_below="@id/text_genre"
-            android:text="Year"
-            android:paddingTop="5dp"/>
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_rating"
+            android:layout_below="@id/text_genre"
             android:layout_toEndOf="@id/image_view"
+            android:paddingTop="5dp"
+            android:text="Year" />
+
+        <TextView
+            android:id="@+id/text_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/text_year"
-            android:text="Rating"
-            android:paddingTop="5dp"/>
+            android:layout_toEndOf="@id/image_view"
+            android:paddingTop="5dp"
+            android:text="Rating" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_rating"
+            android:layout_marginStart="-64dp"
+            android:layout_marginTop="7dp"
+            android:layout_toEndOf="@+id/image_view"
+            android:isIndicator="false"
+            android:numStars="5"
+            android:scaleX="0.5"
+            android:scaleY="0.5"
+            android:stepSize="1" />
+
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
