added 5 star rating function to main activity, not functional

--- a/app/src/main/res/layout/movies_shows_card.xml
+++ b/app/src/main/res/layout/movies_shows_card.xml
@@ -74,7 +74,9 @@
             android:numStars="5"
             android:scaleX="0.5"
             android:scaleY="0.5"
-            android:stepSize="1" />
+            android:stepSize="1"
+            android:rating="@={viewModel.moviesshowscard}"
+        />
 
 
     </RelativeLayout>
