--- a/app/src/main/res/layout/movies_shows_card.xml
+++ b/app/src/main/res/layout/movies_shows_card.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="208dp"
+        android:layout_height="223dp"
         android:padding="20dp">
 
         <ImageView
@@ -15,12 +15,13 @@
             android:layout_height="100dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/results_image"
-            android:src="@drawable/background_image" /> <!-- Temporary photo -->
+            android:src="@drawable/cinema" /> <!-- Temporary photo -->
 
         <TextView
             android:id="@+id/text_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_toEndOf="@+id/image_view"
             android:text="Movie Title"
             android:textSize="18sp"
@@ -31,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_name"
+            android:layout_marginLeft="10dp"
             android:layout_toEndOf="@id/image_view"
             android:paddingTop="5dp"
             android:text="Type" />
@@ -40,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_type1"
+            android:layout_marginLeft="10dp"
             android:layout_toEndOf="@id/image_view"
             android:paddingTop="5dp"
             android:text="Genre" />
@@ -49,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_genre"
+            android:layout_marginLeft="10dp"
             android:layout_toEndOf="@id/image_view"
             android:paddingTop="5dp"
             android:text="Year" />
@@ -58,25 +62,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_year"
+            android:layout_marginLeft="10dp"
             android:layout_toEndOf="@id/image_view"
             android:paddingTop="5dp"
-            android:text="Rating" />
+            android:text="Critic Rating" />
+
+        <TextView
+            android:id="@+id/text_userrating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_rating"
+            android:layout_marginLeft="10dp"
+            android:layout_toEndOf="@id/image_view"
+            android:paddingTop="5dp"
+            android:text="User Ratings: " />
 
         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_rating"
-            android:layout_marginStart="-64dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginStart="-55dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="21dp"
             android:layout_toEndOf="@+id/image_view"
             android:isIndicator="false"
             android:numStars="5"
             android:scaleX="0.5"
             android:scaleY="0.5"
-            android:stepSize="1"
-            android:rating="@={viewModel.moviesshowscard}"
-        />
+            android:stepSize="1" />
 
 
     </RelativeLayout>
