--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,35 @@
         <action
             android:id="@+id/action_navigation_home_to_navigation_q12"
             app:destination="@id/navigation_q1" />
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_shuffle"
+            app:destination="@id/navigation_shuffle" />
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_browse"
+            app:destination="@id/navigation_browse" />
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_shuffle2"
+            app:destination="@id/navigation_shuffle" />
     </fragment>
 
     <fragment
         android:id="@+id/navigation_browse"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.browse.BrowseFragment"
         android:label="@string/title_browse"
-        tools:layout="@layout/fragment_browse" />
+        tools:layout="@layout/fragment_browse" >
+        <action
+            android:id="@+id/action_navigation_browse_to_navigation_shuffle"
+            app:destination="@id/navigation_shuffle" />
+        <action
+            android:id="@+id/action_navigation_browse_to_navigation_home"
+            app:destination="@id/navigation_home" />
+        <action
+            android:id="@+id/action_navigation_browse_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+        <action
+            android:id="@+id/action_navigation_browse_to_navigation_quizresults"
+            app:destination="@id/navigation_quizresults" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
@@ -31,7 +53,15 @@
         android:id="@+id/navigation_shuffle"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.shuffle.ShuffleFragment"
         android:label="Shuffle"
-        tools:layout="@layout/fragment_shuffle" />
+        tools:layout="@layout/fragment_shuffle" >
+        <action
+            android:id="@+id/action_navigation_shuffle_to_navigation_quizresults"
+            app:destination="@id/navigation_quizresults" />
+        <action
+            android:id="@+id/action_navigation_shuffle_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
+
 
     <fragment
         android:id="@+id/navigation_q1"
@@ -77,7 +107,17 @@
         android:id="@+id/navigation_quizresults"
         android:name="com.example.what2watch_svitlik_odunsi_f23.ui.quizresults.ResultsFragment"
         android:label="Results"
-        tools:layout="@layout/fragment_results" />
+        tools:layout="@layout/fragment_results" >
+        <action
+            android:id="@+id/action_navigation_quizresults_to_navigation_home"
+            app:destination="@id/navigation_home" />
+        <action
+            android:id="@+id/action_navigation_quizresults_to_navigation_shuffle"
+            app:destination="@id/navigation_shuffle" />
+        <action
+            android:id="@+id/action_navigation_quizresults_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_Register"
