--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,19 +11,18 @@
         android:id="@+id/text_Home"
         android:layout_width="260dp"
         android:layout_height="62dp"
-        android:fontFamily="cursive"
-        android:text="What2Watch"
-        android:textColor="#D30404"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text=" What2Watch"
+        android:textColor="#000000"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.02"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintVertical_bias="0.071" />
+
 
     <EditText
         android:id="@+id/username"
@@ -34,157 +33,128 @@
         android:inputType="text"
         android:text="Username"
         app:layout_constraintBottom_toTopOf="@+id/editEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.438"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
         app:layout_constraintTop_toBottomOf="@+id/text_Home"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
-
 
     <EditText
         android:id="@+id/editEmailAddress"
-        android:layout_width="367dp"
-        android:layout_height="62dp"
-        android:layout_marginEnd="28dp"
+        android:layout_width="378dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="8dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/editPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/username"
-        app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.869"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@id/username"
         tools:ignore="HardcodedText" />
-
+<!--
     <TextView
         android:id="@+id/personalInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
         android:text="Personal Information"
         android:textColor="#070101"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.386"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editPassword"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@id/editPassword"
         tools:ignore="HardcodedText" />
-
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="126dp"
         android:layout_height="22dp"
-        android:layout_marginTop="321dp"
-        android:layout_marginBottom="241dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="sans-serif-black"
         android:text="Date of Birth"
         android:textColor="#070101"
         android:textSize="16sp"
         android:textStyle="bold"
+
         android:typeface="serif"
-        app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
-        app:layout_constraintEnd_toEndOf="@+id/personalInfo"
-        app:layout_constraintHorizontal_bias="0.254"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.58"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/genderSpinner"
         tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextDate"
-        android:layout_width="160dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="99dp"
+        android:layout_width="123dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="64dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="mm/dd/yyyy"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
-        app:layout_constraintEnd_toStartOf="@+id/genderSpinner"
-        app:layout_constraintEnd_toEndOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/textView13"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="HardcodedText" />
 
+        app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.416"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="HardcodedText" />
+-->
     <Button
         android:id="@+id/Registerbutton"
         android:layout_width="282dp"
         android:layout_height="61dp"
         android:text="Register"
         app:iconPadding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.844"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/editPassword"
         tools:ignore="HardcodedText" />
-
+<!--
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="281dp"
         android:layout_height="68dp"
         android:text="I agree to the terms of use and privacy"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.944"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/Registerbutton"
         tools:ignore="HardcodedText" />
-
-
+-->
     <EditText
         android:id="@+id/editPassword"
         android:layout_width="381dp"
         android:layout_height="58dp"
+        android:layout_marginTop="8dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="@+id/editEmailAddress"
-        app:layout_constraintHorizontal_bias="0.076"
-        app:layout_constraintStart_toStartOf="@+id/editTextDate"
-        app:layout_constraintTop_toBottomOf="@+id/text_Home"
-        app:layout_constraintVertical_bias="0.631"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@id/editEmailAddress"
         tools:ignore="HardcodedText" />
-
+<!--
     <TextView
         android:id="@+id/textView6"
         android:layout_width="74dp"
         android:layout_height="19dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginBottom="113dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:textColor="#070202"
         android:textSize="16sp"
         android:textStyle="bold"
+
         android:typeface="serif"
-        app:layout_constraintHorizontal_bias="0.584"
-        app:layout_constraintVertical_bias="0.071"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
         app:layout_constraintTop_toBottomOf="@+id/personalInfo"
         tools:text="Gender" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextDate"
-        app:layout_constraintTop_toTopOf="@+id/editTextDate"
-        tools:text="Female" />
 
     <TextView
         android:id="@+id/textView12"
@@ -195,36 +165,38 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintVertical_bias="0.359"
-        app:layout_constraintEnd_toEndOf="@+id/textView13"
-        app:layout_constraintStart_toStartOf="@+id/textView13"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.418"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate"
-        tools:text="Country"
-        tools:ignore="UnknownId" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="UnknownId"
+        tools:text="Country" />
 
     <Spinner
         android:id="@+id/genderSpinner"
-        android:layout_width="196dp"
-        android:layout_height="56dp"
+        android:layout_width="147dp"
+        android:layout_height="33dp"
         android:layout_margin="16dp"
+
+        android:layout_marginTop="16dp"
         android:text="@string/gender"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintEnd_toEndOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/personalInfo"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Spinner
         android:id="@+id/countrySpinner"
-        android:layout_width="359dp"
-        android:layout_height="51dp"
+        android:layout_width="320dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="4dp"
         android:text="Country"
         android:textColor="#0C0606"
-        app:layout_constraintBottom_toTopOf="@+id/Registerbutton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintHorizontal_bias="0.766"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
-
+-->
 </androidx.constraintlayout.widget.ConstraintLayout>
