--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,47 +21,62 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.092" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/text_1"
+        android:layout_width="283dp"
+        android:layout_height="88dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="ready for something new?"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/text_Home"
+        app:layout_constraintStart_toStartOf="@+id/text_Home"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
         android:id="@+id/btn_pickForMe"
         style="@style/Widget.Material3.Button"
-        android:layout_width="149dp"
-        android:layout_height="59dp"
+        android:layout_width="198dp"
+        android:layout_height="66dp"
         android:backgroundTint="#8F79BF"
         android:fontFamily="@font/alata"
         android:text="Shuffle"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_start"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_start"
         app:layout_constraintTop_toBottomOf="@+id/btn_start"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.028" />
 
     <Button
         android:id="@+id/btn_start"
         style="@style/Widget.Material3.Button"
-        android:layout_width="149dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="198dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#8F79BF"
         android:fontFamily="@font/alata"
-        android:text="Begin"
+        android:text="Start"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="@+id/text_Home"
-        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="@+id/text_Home"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/text_1" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="225dp"
-        android:layout_height="251dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="200dp"
+        android:layout_height="216dp"
+        android:layout_marginTop="24dp"
         android:src="@drawable/filmreel"
         app:layout_constraintEnd_toEndOf="@+id/text_Home"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/text_Home"
         app:layout_constraintTop_toBottomOf="@+id/text_Home" />
 
