--- a/app/src/main/res/layout/fragment_q1.xml
+++ b/app/src/main/res/layout/fragment_q1.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.q1.q1Fragment">
+    tools:context=".ui.q1showmovie.q1Fragment">
+
 
     <TextView
         android:id="@+id/text_q1"
